--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,16 @@
     "name": "phpmvc/comments",    
     "type": "library",
     "description": "Example for comments classes to begin with",
-    "keywords": ["comments"],
+    "keywords": ["comments", "education"],
     "homepage": "http://dbwebb.se",
     "license": "MIT",
     "authors": [
-        {"name": "Mikael Roos", "email": "me@mikaelroos.se"}
+        {
+            "name": "Mkael Roos",
+            "email": "me@mikaelroos.se",
+            "homepage": "http://mikaelroos.se",
+            "role": "Developer"
+        },
     ],
     "require": {
         "php": ">=5.4"
