--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
         "php": ">=5.4"
     },
     "autoload": {
-        "psr-4": { "": "src/" }
+        "psr-4": { "Phpmvc": "src/" }
     }
 }
